add: ml predict 2
