# backend/internal/delivery/docs/swagger.json
@@ -440,6 +440,55 @@
                     }
                 }
             }
+        },
+        "/ml_predict_write": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ml"
+                ],
+                "summary": "Save predicts from two weeks before start date and two weeks after",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Incident create",
+                        "name": "start_date",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -448,6 +497,9 @@
             "properties": {
                 "consumer_type": {
                     "type": "integer"
+                },
+                "date": {
+                    "type": "string"
                 },
                 "district": {
                     "type": "boolean"
